--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "parcel-project-template",
+  "name": "Maksmaximusmaxim",
   "version": "2.0.0",
-  "description": "**Read in other languages: [Русский](README.md), [Polski](README.pl.md).**",
-  "homepage": "https://Maksmaximusmaxim.github.io/-team-project",
+  "description": "",
+  "homepage": "https://github.com/Maksmaximusmaxim/-team-project",
   "scripts": {
-    "start": "parcel src/*.html --open",
+    "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /-team-project/"
   },
   "repository": {
@@ -27,6 +27,5 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "main": "index.js"
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
