--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "@splidejs/splide": "^4.0.7",
     "basiclightbox": "^5.0.4",
-    "modern-normalize": "^1.1.0",
-    "tui-pagination": "^3.4.1"
+    "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
